--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "find-process": "^1.1.3",
+    "json-beautify": "^1.0.1",
     "tslib": "^1"
   },
   "devDependencies": {
