--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "@types/inquirer": "^0.0.43",
     "find-process": "^1.1.3",
+    "inquirer": "^6.2.0",
     "json-beautify": "^1.0.1",
     "tslib": "^1"
   },
